LA-22: Fix package for sonar exclusions and address some violations